--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/server.js"
+    "start": "nodemon backend/server.js",
+    "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build"
   },
   "author": "kana19",
   "license": "ISC",
